Added a way to either skip or replace workouts which can be downloaded directly from the site intead of parsing them. Fixed a bug when a directory per plan and week was not properly created. Fixed a bug when output folders were all in the lower case. Added new options for the CLI (--skip and --replace). Fixed a typo which prevented ZRangedInterval from being printed properly.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,9 @@
             "name": "Python: Main File",
             "type": "python",
             "request": "launch",
-            "program": "main.py",
-            "console": "integratedTerminal"
+            "program": "zwift_parser.py",
+            "console": "integratedTerminal",
+            "args": ["https://whatsonzwift.com/workouts",]
         }
     ]
 }
