--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,12 @@
 [metadata]
 name = zwift-workouts-parser 
-version = 1.0.0
+version = 1.0.1
 author = Alexander Shpuntenko
 author_email = shpuntenko.a@gmail.com
 description = A package that allows you to download workouts from https://whatsonzwift.com
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/pypa/sampleproject
+url = https://github.com/alexshpunt/zwift_workouts_parser
 project_urls =
     Bug Tracker = https://github.com/alexshpunt/zwift_workouts_parser/issues
 classifiers =
@@ -19,6 +19,10 @@ package_dir =
     = src
 packages = find:
 python_requires = >=3.6
+install_requires = 
+    beautifulsoup4
+    certifi
+    lxml
 
 [options.packages.find]
 where = src
